--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Drawing Online</title>
-    <link rel="shortcut icon" href="/favicon.png"><link href="/static/css/vendors.40330c0b.chunk.css" rel="stylesheet"><link href="/static/css/main.21f8ea8c.css" rel="stylesheet"></head>
+    <link rel="shortcut icon" href="/drawing-board/web/favicon.png"><link href="/drawing-board/web/static/css/vendors.40330c0b.chunk.css" rel="stylesheet"><link href="/drawing-board/web/static/css/main.21f8ea8c.css" rel="stylesheet"></head>
     <body>
         <div id="app"></div>
-    <script type="text/javascript" src="/static/js/vendors.711edf00.js"></script><script type="text/javascript" src="/static/js/main.29574536.js"></script></body>
+    <script type="text/javascript" src="/drawing-board/web/static/js/vendors.711edf00.js"></script><script type="text/javascript" src="/drawing-board/web/static/js/main.c39c4c50.js"></script></body>
 </html>
