build: github page config

--- a/web-dist/index.html
+++ b/web-dist/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Drawing Board</title><link rel="icon" href="/favicon.png"><script defer="defer" src="/static/js/arman-ui.71e7486656ddaa3d33ec.js"></script><script defer="defer" src="/static/js/142.6f88bbefda2bb6041dea.js"></script><script defer="defer" src="/static/js/main.a6dedc9046a354c695b0.js"></script><link href="/static/css/main.91f91099.css" rel="stylesheet"></head><body><div id="app"></div></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Drawing Board</title>
+    <link rel="icon" href="/drawing-board/web-dist/favicon.png">
+    <script defer="defer" src="/drawing-board/web-dist/static/js/arman-ui.71e7486656ddaa3d33ec.js"></script>
+    <script defer="defer" src="/drawing-board/web-dist/static/js/142.6f88bbefda2bb6041dea.js"></script>
+    <script defer="defer" src="/drawing-board/web-dist/static/js/main.f7893be697ab81823580.js"></script>
+    <link href="/drawing-board/web-dist/static/css/main.237572f9.css" rel="stylesheet">
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
+</html>
